# DnD-GEMMA

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  start_app.bat  start_app.ps1
api/: index.py
scripts/: silero_tts.py
src/rpg_dm/: config.py  db.py  main.py  models.py  prompts.py  schemas.py  utils.py
src/rpg_dm/services/: __init__.py  campaign_service.py  game_service.py  google_tts_service.py  llm_service.py  memory_service.py  serialization.py  silero_tts_service.py  tts_service.py  world_delta_coerce.py
src/rpg_dm/web/static/: app.css  app.js
src/rpg_dm/web/templates/: base.html  index.html  play.html
tests/: test_api_responses.py  test_campaign_service.py  test_game_service.py  test_llm_service.py  test_memory_service.py
