[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-memory-dm"
version = "0.1.0"
description = "Local RPG copilot for LM Studio with persistent world memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "edge-tts>=7.2.8",
  "fastapi>=0.116.0",
  "google-genai>=1.73.1",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.1",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]
local-tts = [
  "imageio-ffmpeg>=0.6.0",
  "scipy>=1.17.1",
  "silero>=0.5.5",
  "soundfile>=0.13.1",
  "torch>=2.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
